static/css/styles.css
:root {
    --color-primary: #c4c4c4;
    --color-secondary: #414649;
    --color-background: #212121;
    --color-background-secondary: #313131;
    --color-text-primary: #ffffff;
    --color-text-secondary: #dfdfdf;
    --color-accent: #9bffac;
    --border-size-primary: 4px;
    --border-radius-primary: 20px;
    --border-radius-secondary: 10px;
    --font-primary: 'JetBrains Mono', monospace;
    --font-secondary: 'Exo', sans-serif;
}

* {
    box-sizing: border-box;
}

a {
    color: var(--color-text-primary);
}

a:visited {
    color: var(--color-text-secondary)
}

html {
    background-color: var(--color-background);
    color: var(--color-text-primary);
    font-family: var(--font-secondary);
    height: 100vh;
    width: 100vw;
}

h1 {
    font-size: 3em;
    font-family: var(--font-primary);
}

h2 {
    font-size: 2em;
    font-family: var(--font-primary);
}

h3 {
    font-size: 1.5em;
    font-family: var(--font-primary);
}

body {
    display: -ms-grid;
    display: grid;
    grid-template-rows: auto 1fr auto;
    height: 100vh;
    width: 100vw;
    overflow: hidden;
    margin: 0;
}

header {
    display: -ms-grid;
    display: grid;
    grid-template-columns: 5vh 1fr 5vh;
    grid-template-rows: 5vh auto;
    border-bottom: var(--color-secondary) 3px solid;
}

header h1 {
    margin: 0;
    max-height: 5vh;
    font-size: 1.5em;
    display: flex;
    justify-content: center;
    align-items: center;
}

header > a.img--container {
    height: 5vh;
    width: 5vh;
}

.img--container > img {
    height: 100%;
    width: 100%;
}

nav > a {
    color: var(--color-text-primary);
    text-decoration: none;
    font-family: var(--font-primary);
    font-size: 1.5em;

    display: flex;
    justify-content: center;
    align-items: center;
}

nav > a.active {
    border-bottom: var(--color-text-primary) 2px solid;
    border-end-end-radius: 2px;
}

nav > a:hover, nav>a:focus, .nav-popout-button:hover, .nav-popout-button:focus {
    color: var(--color-accent);
    border-color: var(--color-accent);
}

nav {
    height: auto;
    max-height: 0;
    overflow: hidden;
    overflow: clip;
    grid-column: 1 / 4;
    grid-row: 2 / 3;

    display: flex;
    flex-direction: column;
    align-items: center;

    transition-property: max-height;
    transition-duration: 1s;
    transition-timing-function: ease-in-out;
}

nav.popout {
    max-height: 4em;
    padding-bottom: .2em;
}

.nav-popout-button {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    font-size: 2em;
    color: var(--color-text-primary);
    text-decoration: none;
}

footer {
    font-size: 1rem;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: .5em;

    white-space: nowrap;
    border-top: var(--color-secondary) var(--border-size-primary) solid;
    background-color: var(--color-background);
}

main {
    height: 100%;
    width: 100vw;
    overflow: auto;
    padding-bottom: 1em;
    /*padding: 1em;
    padding-top: 0;*/
}

#recent-updates-section {
    display: flex;
    flex-direction: column;

    justify-content: center;
    align-items: center;
    gap: 1em;
}

.updates-section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 1em;
}

.pagination-menu a {
    text-decoration: none;
    font: var(--font-primary);
    font-size: 2em;
    margin: 0 .2em;
}

.hidden {
    visibility: hidden;
}

.updates-holder {
    margin: 0 1em;
    display: flex;
    flex-direction: column;
    gap: 1em;
}

.section-header {
    display: flex;
    justify-content: center;
    align-items: center;
    /*line-height: 0;*/
    /*margin-bottom: 0;*/
}

.section-header:not(:first-of-type) {
    border-top: var(--color-secondary) var(--border-size-primary) solid;
    padding-top: .5em
}

.scroll-icon {
    font-size: 2em;
}

.panel:not(:first-child) .section-header {
    border-top: var(--color-secondary) var(--border-size-primary) solid;
    padding-top: .5em
}

.panel ul {
    margin-top: 0.5em;
}

.flex-center {
    display: flex;

    flex-direction: column;
    justify-content: center;
    align-items: center;
}

/* update summary box */

.update-summary {
    border: var(--color-secondary) var(--border-size-primary) solid;
    border-radius: var(--border-radius-primary);
    padding: 0.5em;

    display: -ms-grid;
    display: grid;

    width: 100%;

    background-color: var(--color-background-secondary);
}

.update-summary:hover, .update-summary:focus {
    border-color: var(--color-accent);
}

.update-summary.with-image {
    grid-template-columns: auto 1fr;
}

.update-summary--core {
    color: var(--color-text-primary);
    text-decoration: none;
    padding: .5em;

    display: flex;
    flex-direction: column;
}

a.update-summary {
    text-decoration: none;
}

.update-summary--core h3 {
    font-size: 1.5em;
    line-height: 0;
}

.timestamp {
    line-height: 0;
    align-self: flex-end;
    margin-top: auto;
}

.project-title {
    color: var(--color-text-secondary);
    font-size: 1.1em;
    font-family: 'Exo', sans-serif;
    font-weight: lighter;
}

#update-info {
    /*display: flex;
    flex-direction: column;
    justify-content: start;
    align-items: center;*/
    padding: 1em;
    max-width: 800px;
    margin: 0 auto;
}

#update-info .tag-container {
    justify-content: start;
}

#update-info ul li {
    font-size: 1.2em;
}

#update-info ul li ul li {
    font-size: .8em;
}

#update-info .project-title {
    text-align: center;

    margin-top: 1.5em;
    font-size: 1.5em;
    color: var(--color-accent);

    text-decoration: none;
}

#update-info .project-title:hover, #update-info .project-title:focus {
    /*color: var(--color-accent);*/

    text-decoration: underline;
}


#update-info h1 {
    margin: 0;
}

.update-title {
    font-size: 1.5em;
    white-space: nowrap;
}

.update-section, .project-section {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
}

/* Project summaries */

.projects-section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 1em;
    gap: 1em;
}

.project-summary {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    width: 100%;
    padding: 1em;

    background-color: var(--color-background-secondary);
    border: var(--color-secondary) var(--border-size-primary) solid;
    border-radius: var(--border-radius-primary);

    /* Fixing link stuff */
    color: var(--color-text-primary);
    text-decoration: none;
}

.project-summary:hover, .project-summary:focus {
    border-color: var(--color-accent);
}

.project-summary-title {
    font-size: 1.5em;
    margin: 0;
    margin-bottom: .3em;
    font-family: var(--font-primary);
}

/* bullet settings */

ul.bullet__caret > li:not(.bullet__none)::before {
    content: ">";
    margin: 0 .25em;    /* any design */
}

ul.bullet__caret  {
    list-style: none;
    padding: 0px;
}

.bullet__none {
    list-style: none;
}

/* tags */

.tag-container {
    display: flex;
    justify-content: center;
    align-items: center;
}

.tag {
    font-size: 1em;
    /*display: inline-block;*/
    font-weight: bold;
    border: var(--color-primary) 1px solid;
    border-radius: 8px;
    width: -moz-fit-content;
    width: fit-content;
    margin-left: .5em;
    padding: 0 .4em;
    text-transform: capitalize;
}

.tag.major {
    background-color: #3b2ead;
    color: var(--color-text-secondary);
}

.tag.minor {
    background-color: #742ead;
    color: var(--color-text-secondary) ;
}

.tag.c-sharp {
    background-color: #330081;
    color: var(--color-text-secondary);
}

.tag.python {
    background-color: #6a580f;
    color: var(--color-text-secondary);
}

.tag.html {
    background-color: #ae3516;
    color: var(--color-text-secondary);
}

.tag.godot {
    background-color: #153a55;
    color: var(--color-text-secondary);
}

#project-info {
    margin: 0 1em;
}

.panel {
    margin: 0 1em;
}

.updates-container {
    display: flex; 
    flex-direction: column;

    gap: 1em;
}

/* Desktop view !! */

@media screen and (min-width: 800px) {
    #primary-page {
        display: grid;
        grid-template-columns: 2fr 1fr;
        min-height: 100%;
        width: 100%;
    }

    .panel {
        height: 100%;
        width: 100%;
        padding: 1em;
        margin: 0;
    }

    main {
        padding-bottom: 0;
    }

    .panel:not(:first-child) .section-header {
        border-top: none;
        padding-top: 0;
    }

    #recent-updates-pane {
        height: 100%;
        overflow: hidden;
    }

    #recent-updates-section {
        overflow: auto;
    }

    .updates-holder {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: center;
        width: 100%
    }

    .panel:not(:first-child) {
        border-left: var(--color-secondary) var(--border-size-primary) solid;
    }

    .projects-section {
        flex-direction: row;
        flex-wrap: wrap;
    }

    .project-summary {
        max-width: max(30%, 20em);
        min-height: min-content;
        aspect-ratio: 1.2/1;

        transition: width ease .5s, height ease 0.5s;
        transition: max-width ease .5s, height ease 0.5s;
    }

    .project-summary:focus, .project-summary:hover {
        max-width: max(32%, 21em);
    }

    header {
        grid-template-columns: 5vh 1fr auto;
        grid-template-rows: 5vh;
    }

    .nav-popout-button {
        display: none;
    }

    nav {
        grid-column: 3/4;
        grid-row: 1/2;

        height: auto;
        max-height: 5vh;

        flex-direction: row;
    }
    
    nav > a {
        margin: .5em;
    }

    #project-info {
        display: grid;
        grid-template-columns: 2fr 1fr;
        grid-auto-flow: column;

        min-height: 100%;
        margin: 0;
    }

    .updates-section .update-summary {
        margin: 0;
        width: 30%;
        aspect-ratio: 1.2/1;
    }

    #update-info {
        /*display: grid;
        grid-template-columns: 2fr ;
        grid-auto-flow: column;*/
        

        background-color: var(--color-background-secondary);
        border-left: var(--color-secondary) var(--border-size-primary) solid;
        border-right: var(--color-secondary) var(--border-size-primary) solid;

        min-height: 100%
    }

    .info-panel, .updates-panel {
        padding: 0 2vw;
    }

    .updates-panel {
        grid-column: 2/3;
        grid-row: 1/10;
        border-left: var(--color-secondary) var(--border-size-primary) solid;
    }
}

